--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -1,11 +1,18 @@
 button{
-  padding: .25rem 1rem;
+  padding: .5rem 2rem;
   border: none;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 .words__level{
   background-color: transparent;
-  outline: 2px solid cornflowerblue;
-  margin: 0 .5rem;
+  outline: 2px solid transparent;
+  margin: .125rem .5rem;
+  font: 700 1rem/1.5em Arial;
+  color: whitesmoke;
+  &:hover{
+    color: white;
+    box-shadow: 0 0 0 1px #aeaeae;
+  }
 }
