--- a/src/assets/styles/_start.scss
+++ b/src/assets/styles/_start.scss
@@ -3,9 +3,37 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  background-color: whitesmoke;
+  background-image: linear-gradient(rgb(24, 90, 157) 0%, rgb(67, 206, 162) 100%);
 }
 
 .game{
+  display: flex;
   padding: 1rem;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  .word{
+    button{
+      display: flex;
+      padding: 0;
+      width: 70px;
+      height: 70px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      background-color: rgba($color: #ffffff, $alpha: .5);
+      svg{
+        width: 40px;
+        height: 40px;
+        fill: #ffffff;
+      }
+    }
+ 
+
+  }
+  &__next_word{
+    padding: 1rem;
+    background-color: #eaeaea;
+  }
 }
