--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,9 @@
+$base-font-family:Arial,sans-serif;
+
+:root{
+  font-family: $base-font-family;
+}
 
 @import '_start';
 @import '_buttons';
+@import '_answers';
