feat:add featire

--- a/src/assets/styles/_answers.scss
+++ b/src/assets/styles/_answers.scss
@@ -5,6 +5,9 @@
   &__item{
     padding: .5rem 1rem;
     cursor: pointer;
+    &.correct{
+      background-color: rgba($color: lightgreen, $alpha: .5);
+    }
     &:hover{
       background-color: rgba($color: #ffffff, $alpha: 0.25);
       border-radius: 4px;
