--- a/src/assets/styles/_start.scss
+++ b/src/assets/styles/_start.scss
@@ -14,6 +14,19 @@
   align-items: center;
   width: 100%;
   .word{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    &__image{
+      height: 150px;
+      overflow: hidden;
+      padding: 0 1rem;
+      & img{
+        display: none;
+        height: 150px;
+        object-fit: cover;
+      }
+    }
     button{
       display: flex;
       padding: 0;
@@ -34,10 +47,29 @@
   }
   &__next_word{
     padding: 1rem;
-    background-color: #9328ff;
+    background-color: rgb(147, 40, 255);
     color: #ffffff;
+    &:disabled{
+      cursor: not-allowed;
+      background-color: rgba(147, 40, 255, .2);
+    }
     &:hover{
       box-shadow:  0 0 6px -1px #8f54c5;
+    }
+  }
+
+  &__result{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    left: calc(50% - 150px);
+    top: 10rem;
+    z-index: 100;
+    background: whitesmoke;
+    padding: 1rem;
+    &_correct{
+     
     }
   }
 }
