--- a/src/assets/styles/_start.scss
+++ b/src/assets/styles/_start.scss
@@ -46,6 +46,8 @@
 
   }
   &__next_word{
+    max-width: 150px;
+    width: 100%;
     padding: 1rem;
     background-color: rgb(147, 40, 255);
     color: #ffffff;
