feat: add smooth fadeIn/fadeOut effect on modal window

--- a/src/assets/styles/_answers.scss
+++ b/src/assets/styles/_answers.scss
@@ -6,9 +6,18 @@
     padding: .5rem 1rem;
     cursor: pointer;
     color: whitesmoke;
+    &.correct,
+    &.incorrect{
+      border-radius: 4px;
+    }
+    
     &.correct{
       background-color: rgba($color: lightgreen, $alpha: .5);
         color: darkgreen;
+    }
+    &.incorrect{
+      background-color: lightcoral;
+      color: darkred;
     }
     &:hover{
       background-color: rgba($color: #ffffff, $alpha: 0.25);
@@ -19,7 +28,7 @@
       }
       &.incorrect{
         background-color: lightcoral;
-        color: crimson;
+        color: darkred;
       }
     }
     span{
